--- a/main.css
+++ b/main.css
@@ -6,21 +6,13 @@
   font-family: palatino linotype;
 }
 
-.jumbotron {
-  background-color: #c40233;
-  height: 500px;
-  width: 1200px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-left: 75px;
-}
-
-.jumbotron .container {
+.container {
+  border-color: #c40233;
+  border-style: solid;
+  border-width: 50px 100px 50px 100px;
   position: relative;
   top:10px;
   background-color: #f7f7f7;
-  width: 1000px;
-  height: 390px;
 }
 
 .jumbotron h1 {
@@ -51,6 +43,17 @@
   text-shadow: none;
 }
 
+.jumbotron div img {
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+.jumbotron li {
+    display: inline;
+}
+
 .learn-more h3 {
     color: #393c3d;
     font-size: 20px;
@@ -66,15 +69,4 @@
     text-align: center;
     font-family: century gothic;
     color: #202020;
-}
-
-.jumbotron div img {
-    width: 25px;
-    height: 25px;
-    margin-right: 10px;
-    margin-top: 20px;
-}
-
-.jumbotron li {
-    display: inline;
 }
