--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
   font-family: palatino linotype;
 }
 
-.container {
+.jumbotron .container {
   border-color: #c40233;
   border-style: solid;
   border-width: 50px 100px 50px 100px;
