--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 
 .jumbotron {
-  border-color: #c40233;
+  border-color: #99ff66;
   border-style: solid;
   border-width: 50px 100px 50px 100px;
   position: relative;
