--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 
 .jumbotron {
-  border-color: #99ff66;
+  border-color: #2e1f2e;
   border-style: solid;
   border-width: 50px 100px 50px 100px;
   position: relative;
