--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 
 .jumbotron {
-  border-color: #00cc99;
+  border-color: #990033;
   border-style: solid;
   border-width: 50px 100px 50px 100px;
   position: relative;
