--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
 }
 
 .jumbotron {
-  border-color: #FF3746;
+  border-color: FA2D38;
   border-style: solid;
   border-width: 50px 100px 50px 100px;
   position: relative;
