--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@
   .jumbotron {
     border: none;
     background-color: white;
-    margin-top: -10px;
+    margin-top: -5px;
     margin-bottom: 5px;
   }
 
@@ -161,5 +161,18 @@
   }
   .nav p {
     text-align: left;
+  }
+
+  .jumbotron h1 {
+    margin-top: -10px;
+    font-size: 50px;
+  }
+
+  .jumbotron h2 {
+    margin-top: 25px;
+  }
+
+  .jumbotron p {
+    margin-top: 25px;
   }
 }
