--- a/main.css
+++ b/main.css
@@ -56,7 +56,9 @@
     font-size: 15px;
     text-align: center;
     font-family: Open Sans;
-    margin-top: 10px;
+    margin-top: 20px;
+    font-weight: bold;
+    
 }
 
 .learn-more p {
