--- a/main.css
+++ b/main.css
@@ -162,6 +162,10 @@
   .nav p {
     text-align: left;
   }
+  
+  .jumbotron {
+    border-width: 50px 80px 50px 80px;
+  }
 
   .jumbotron h1 {
     margin-top: -10px;
