--- a/css/main.css
+++ b/css/main.css
@@ -1,182 +1,110 @@
-.nav p {
+.nav {
+  margin-bottom: 3em;
+}
+
+.line {
+  background-color: #FF4650;
+  height: 0.5em;
+}
+
+.quote {
   text-align: right;
-  color: #b8b8b8;
-  font-size: 15px;
-  padding: 14px 10px;
-  font-family: Crimson Text;
-  margin-bottom: -10px;
+  font-family: 'Cabin', sans-serif;
+  margin-right: 1em;
+  margin-top: 1em;
+  font-size: 1.2em;
+  color: #CFCCCA;
+  font-style: italic;
 }
 
-.jumbotron {
-  border-color: #E0315F;
-  border-style: solid;
-  border-width: 25px;
-  position: relative;
-  margin-top:10px;
-  background-color: #f7f7f7;
+.avatar {
+  background-image: url("../img/stivali.jpg");
+  background-size: 110%;
+  height: 8em;
+  width: 8em;
+  border-radius: 100%;
+  display: block;
+  margin: 0 auto;
 }
 
-.jumbotron h1 {
-  color: #202020;
-  font-size: 30px;  
-  font-family: Open Sans;
-  font-weight: 800;
-  margin-top: 20px;
+h1 {
   text-align: center;
-  text-shadow: none;
+  font-family: 'Josefin Slab', serif;
+  font-size: 4em;
 }
 
-.jumbotron h2 {
-  font-size: 20px;
-  color: #202020;
-  font-family: Open Sans;
+h3, h4, p, ul, footer {
   text-align: center;
-  margin-top: 20px;
-  text-shadow: none;
+  font-family: 'Cabin', sans-serif;
 }
 
-.jumbotron p {
-
-  font-family: serif;
-  color: #444444;
-  font-size: 15px;
-  margin-top: 0px;
-  text-shadow: none;
-  text-align: center;
+h3 {
+  margin-bottom: 1em;
 }
 
-.jumbotron ul li a i {
-  margin-top: 15px;
-  color: black;
-  font-size: 1.5em;
+h4 {
+  margin-bottom: 2em;
 }
 
-.learn-more h3 {
-  color: #171717;
-  font-size: 15px;
-  text-align: center;
-  font-family: Open Sans;
-  margin-top: 20px;
-  
+.break {
+  border-bottom: 1px solid #CFCCCA;
+  max-width: 10em;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 2em;
 }
 
-.learn-more p {
-  font-size: 13px;
-  margin-bottom: 13px;
-  text-align: center;
-  font-family: Open Sans;
-  color: #202020;
+.intro {
+  font-size: 1.2em;
+  margin-bottom: 2em;
 }
 
-@media only screen and (max-width: 480px) {
-  .nav p {
-    font-size: 17px;
-    color: #CE1D41;
-  }
+.fa-caret-down {
+  color: #CFCCCA;
+}
 
-  .jumbotron {
-    border: none;
-    background-color: white;
-    margin-bottom: 5px;
-  }
+.mail {
+  font-size: 1.2em;
+  margin-bottom: 2em;
+}
 
-  .image {
-    background-image: url("../img/stivali.jpg");
-    background-size: 110%;
-    height: 250px;
-    width: 250px;
-    border-radius: 100%;
-    border: 2px solid black;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.mail a {
+  transition: 0.2s ease-in-out;
+}
 
-  .jumbotron h1 {
-    font-size: 40px;
-  }
+.mail a:hover {
+  color: #819bd5;
+  text-decoration: none;
+}
 
-  .jumbotron h2 {
-    font-size: 23px;
-    margin-top: 27px;
-  }
+.social i {
+  font-size: 2em;
+  color: #706F6E;
+  padding: 0.5em;
+  margin-bottom: 1em;
+  transition: .5s ease-in-out;
+  opacity: 1;
+}
 
-  .jumbotron p {
-    font-size: 18px;
-    margin-top: 20px;
-  }
+.social i:hover {
+  opacity: .5;
+}
 
-  .jumbotron ul li a i {
-    font-size: 1.7em;
-  }
-
-  .learn-more h3 {
-    font-weight: bold;
-  }
-
-  .learn-more p {
-    margin-bottom: 30px;
-  }
-
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
-  .nav p {
-    font-size: 20px;
-    margin-top: 12px;
+  .avatar {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
   }
-
-  .jumbotron {
-    border-color: #CE1D41;
-  }
-
-  .jumbotron h1 {
-    font-size: 45px;
-  }
-
-  .jumbotron h2 {
-    font-size: 25px;
-  }
-
-  .jumbotron p {
-    font-size: 20px;
-  }
-
-  .jumbotron ul li a i {
-   font-size: 1.9em;
- }
-
- .learn-more h3 {
-  font-size: 20px;
-}
-
-.learn-more p {
-  font-size: 15px;
-}
-}
-
-@media only screen and (min-width: 1200px) {
-  body {
-    background-image: url("../img/sakura.png"); 
-    background-size: 100%;
-  }
-  .nav p {
-    text-align: left;
-  }
-
-  .jumbotron {
-    border-width: 50px 80px 50px 80px;
-  }
-
-  .jumbotron h1 {
-    margin-top: -10px;
-    font-size: 50px;
-  }
-
-  .jumbotron h2 {
-    margin-top: 25px;
-  }
-
-  .jumbotron p {
-    margin-top: 25px;
+  .avatar:hover {
+    -webkit-filter: grayscale(0);
+    filter: grayscale(0);
   }
 }
