--- a/v2/css/main.css
+++ b/v2/css/main.css
@@ -42,6 +42,8 @@
   width: 10em;
 }
 
+/* Code bubble animation */
+
 .code-bubble .lines path {
   stroke-dasharray: 800;
   stroke-dashoffset: 800;
