--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,6 +114,10 @@ const allPosts = await Astro.glob("../pages/posts/*.mdx");
       min-height: 100vh;
     }
 
+    .role {
+      margin-bottom: 2.5rem;
+    }
+
     .info {
       margin-top: 0;
     }
