--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,6 +59,7 @@ const allPosts = await Astro.glob("../pages/posts/*.mdx");
     color: var(--secondary);
     font-family: "DM Sans", sans-serif;
     font-size: 1rem;
+    font-weight: 400;
   }
 
   .info .title {
