--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -96,4 +96,11 @@ const { title } = Astro.props;
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
       DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
   }
+
+  pre[class*="astro-code"] {
+    border-radius: 8px;
+    padding: 1.5rem;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
 </style>
